Add comprehensive to-do plan for building a robust framework-free frontend

--- a/v2/frontend/html/index.html
+++ b/v2/frontend/html/index.html
@@ -40,7 +40,7 @@
                 </div>
             </div>
             
-        <button class="login-btn pulse-animation" id="loginBtn" href="login.html">
+            <button class="login-btn pulse-animation" id="loginBtn">
                 <span>Access Portal</span>
                 <div class="btn-glow"></div>
             </button>
